# private-key-service

./: Cargo.toml  README.md
src/: main.rs
src/keys/: private_key.pem  public_key.pem
src/models/: mod.rs
verifier/src/: main.rs
verifier/src/keys/: private_key.pem  public_key.pem
