[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rand = "0.8.5"  #Needed to downgrade rand to match versions with rsa crate
rsa = { version = "0.9.8", features = ["pem", "sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"